--- a/myProject/myproject/bookPlaylists/templates/add.html
+++ b/myProject/myproject/bookPlaylists/templates/add.html
@@ -7,12 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HELLO THERE
-    </h1>
-    <p>
-        testing if this is working
-    </p>
-    
+    <h1>Add member</h1>
+    <form action="addrecord/" method="post">
+    {% csrf_token %}
+    Book name:<br>
+    <input name="first">
+    <br><br>
+    Book author:<br>
+    <input name="last">
+    <br><br>
+    <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
