added the ability to delete books + style changes

--- a/myProject/myproject/bookPlaylists/templates/index.html
+++ b/myProject/myproject/bookPlaylists/templates/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'style.css' %}">
 </head>
 <body>
-    
+    <div class = "flex-container" id="papa-div">
+        <div class = "flex-container" id = "search-container">
+            <!--the search bar element-->
+            <form class="flex-container">
+                {% csrf_token %}
+                <input type="text" class = "search-bar" id = "search-input" placeholder="Search by book name or author last name" autocomplete="on">
+                <!--the search bar button-->
+                <input type="image" value = "Search" class = "search-bar" id="search-button" src = "../static/cropped">    
+            </form>
+        </div>
+    </div>
 </body>
 </html>
