--- a/myProject/myproject/bookPlaylists/static/style.css
+++ b/myProject/myproject/bookPlaylists/static/style.css
@@ -1,8 +1,83 @@
+body{
+    background-image: linear-gradient(to bottom right, rgba(255,0,0,1) 0%, rgba(255,149,0,1) 40%, rgba(255,244,0,1) 100%);
+    height: 100vh;
+    width: 100vw;
+}
+
+.flex-container{
+    display:flex;
+    justify-content: center;
+    vertical-align: middle;
+}
+
+h1{
+    text-align: center;
+}
+
+/*results*/
+
+.table-column{
+    border: 1px solid;
+    padding: 8px;
+}
+
 #results{
     border: 1px solid;
 }
 
-.tableColumn{
-    border: 1px solid;
-    padding: 8px;
+/*index*/
+
+#papa-div{
+    height: 100vh;
+    width: 100vw;
+    display:table-cell;
+    vertical-align: middle;
+}
+
+.search-bar{
+    height: 5vh;
+    border-style: none;
+}
+
+#search-button{
+    border-radius: 0px 12px 12px 0px;
+    width:5vh;
+    padding:0px;
+}
+
+#search-button > img{
+    width:100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 0px 12px 12px 0px;
+}
+
+#search-input {
+    border-radius: 12px 0px 0px 12px;
+    width: 35vw;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+#search-form{
+    display: flex;
+    flex-direction: row;
+    flex: 0;
+}
+
+#search-form > * {
+    align-self: stretch;
+}
+
+/*add page*/
+
+#add-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#add-form > *{
+    align-self: center;
 }
