--- a/myProject/myproject/bookPlaylists/templates/add.html
+++ b/myProject/myproject/bookPlaylists/templates/add.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'style.css' %}">
 </head>
 <body>
-    <h1>Add member</h1>
-    <form action="addrecord/" method="post">
-    {% csrf_token %}
-    Book name:<br>
-    <input name="first">
-    <br><br>
-    Book author:<br>
-    <input name="last">
-    <br><br>
-    <input type="submit" value="Submit">
-    </form>
+    <!--form for adding books-->
+    <div>
+        <h1>Add member</h1>
+        <form action="addrecord/" method="post" id="add-form">
+        {% csrf_token %}
+        <p>Book name:</p><br>
+        <!--input book name-->
+        <input name="first">
+        <br><br>
+        <p>Book author:</p><br>
+        <!--input book author-->
+        <input name="last">
+        <input type="submit" value="Submit">
+        </form>
+    </div>
 </body>
 </html>
